--- a/脚手架搭建.md
+++ b/脚手架搭建.md
@@ -1,9 +1,14 @@
-```
-echo "# feDocuments" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git remote add origin https://github.com/ZnFrontEnd/feDocuments.git
-git push -u origin master
-```
+## 脚手架搭建
+
+日常开发中，我们多多少少会遇到创建一个新项目，尤其是在小的初创型公司，砖多，猿少，工期短，如何快速搭建起一个项目很大程度上决定了这个项目延不延期的一个关键点，脚手架做的工作就是快速将一些需要反复配置和不变的文件生成到新项目中
+
+脚手架要做的事情：
+
+将一些需要反复配置和编写的文件提取出来，
+
+控制版本
+
+如何自己动手搭建一个脚手架
+
+首先，我们在搭建之前得想好这个脚手架，通过这个脚手架生成了项目实例中，哪些文件是允许用户自定义的，哪些是不能更改的
 
