:dolphin: 新增Promise链式调用详解

--- a/2018-10脚手架搭建.md
+++ b/2018-10脚手架搭建.md
@@ -1,14 +1,92 @@
 ## 脚手架搭建
 
-日常开发中，我们多多少少会遇到创建一个新项目，尤其是在小的初创型公司，砖多，猿少，工期短，如何快速搭建起一个项目很大程度上决定了这个项目延不延期的一个关键点，脚手架做的工作就是快速将一些需要反复配置和不变的文件生成到新项目中
+脚手架的出现往往是为了解决一下繁杂的，重复的配置和项目的初始化。但是什么时候该去搭脚手架，什么时候不需要呢，脚手架的搭建不是我上来就要搭个什么什么样的脚手架，我觉得它不应该独立于业务，天马行空的添胳膊画腿的，而应该是基于业务的，在业务的基础上进行的当我们只有一个项目的时候可以直接去搭建项目，然后写业务代码，这个时候如果还去做脚手架反而有点本末倒置。而当我接到第二项目时，我发现这个项目和之前的项目框架是一样的，而且有一些代码是可以复用的，业务线中可能还会有第三个，第四个类似的项目，那这个时候就该去搭脚手架了
 
-脚手架要做的事情：
+#### 1.0版本的脚手架
 
-将一些需要反复配置和编写的文件提取出来，
+只是做了复制粘贴的功能
 
-控制版本
+[DEMO](https://github.com/youstde/gameframe)
 
-如何自己动手搭建一个脚手架
+这个demo是因为之前为了配合公司业务的推广需要做很多移动端的[互动小游戏](https://activity.ltyun.cc/lottery/real/294/index.html?back=%7B%22pid%22%3A%2212_17_140%22%2C%22location%22%3A%2230_8_1%22%2C%22source%22%3A13%2C%22validation%22%3A2880248088229%2C%22lotteryId%22%3A294%7D)
 
-首先，我们在搭建之前得想好这个脚手架，通过这个脚手架生成了项目实例中，哪些文件是允许用户自定义的，哪些是不能更改
-=======
+一开始我们做第一个互动小游戏的时候用了大概一周的时间，优化也用了一周，所以周期很长，如果每个项目都是这样的周期，估计老板就炸了，
+
+其主要的核心是build.js
+
+```js
+var spawn = require('child_process').spawn;
+var fs = require('fs');
+var apiName = process.argv[2];  // 传入的参数，create或者是update
+
+var Build = {
+    create: function () {
+        this._init();
+        var cwd = this.config.cwd;
+        this.config.files = this.config.files.concat([
+            [__dirname + '/src/page/index/index.js', cwd + '/src/page/index'],
+            [__dirname + '/src/page/index/html.js', cwd + '/src/page/index'],
+            [__dirname + '/src/page/index/gamejson.js', cwd + '/src/page/index'],
+            [__dirname + '/src/page/index/content.ejs', cwd + '/src/page/index'],
+            [__dirname + '/src/page/index/index.less', cwd + '/src/page/index'],
+            [__dirname + '/README.md', cwd]
+        ]);
+        this.mkdir();
+        this.copy();
+    },
+
+    update: function () {
+        this._init();
+        this.mkdir();
+        this.copy();
+    },
+
+    _init: function () {
+        var cwd = process.cwd();
+        this.config = {
+            cwd: cwd,
+            files: [
+                ['-rf',__dirname + '/mock', cwd],
+                ['-f',__dirname + '/gitignore.txt', cwd+'/.gitignore'],
+                ['-f', __dirname + '/gulpfile.js', cwd],
+                ['-f', __dirname + '/webpack.config.js', cwd],
+                ['-f', __dirname + '/package1.json', cwd+'/package.json'],
+                ['-rf', __dirname + '/src/components', cwd + '/src'],
+                ['-rf', __dirname + '/src/modules', cwd + '/src']
+            ]
+        };
+    },
+
+    mkdir: function () {
+        var dirs = ['/src', '/src/page', '/src/page/index'];
+        var cwd = this.config.cwd;
+        dirs.forEach(function (dir) {
+            dir = cwd + dir;
+            if (!fs.existsSync(dir)) {
+                fs.mkdirSync(dir);
+            }
+        });
+    },
+
+    copy: function () {
+        var files = this.config.files;
+        files.forEach(function (file) {
+            spawn('cp', file);
+        })
+    }
+};
+
+if (apiName && Build[apiName]) {
+    Build[apiName]();
+}
+
+module.exports = Build;
+```
+
+通过这个脚手架去创建一个实例
+
+```js
+npm install git+ssh://git@github.com:youstde/gameframe.git;node node_modules/gameframe/build.js create
+```
+
+首先执行这串代码会将脚手架装到实例的node_modules中，然后通过传入的参数去执行build中指定的方法，其中主要都是在做复制粘贴，create和update的唯一区别在于，create创建的page里的内容，update的时候不会去覆盖，因为page里写的是每个项目自己的业务逻辑和特效，component中的文件每次update的时候都会去覆盖，它里面放的是公共的文件和方法还有一些插件，这些公共的东西是不允许在实例中修改，只能通过脚手架去修改（只是在这个业务场景下，我当时是这么做的），因为公共的东西如果不可控，谁都可以在实例里去改的话，那我再次要去修改公共的方法就得去每个实例里一个一个手动改，这样脚手架就很鸡肋了
